force-app/main/default/objects/JBT_RET_CLASS_XFER__x/JBT_RET_CLASS_XFER__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1McZ6ZKPE69HMO7zSHSP9pH9hUNQ9xD39HElkJkmNAm0/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_CLASS_XFERs</externalName>
    <label>Transfer Coursework (external)</label>
    <pluralLabel>Transfer Coursework (external)</pluralLabel>
</CustomObject>