force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/COURSE__c.field-meta.xml
<CustomField>
    <fullName>COURSE__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.CRS_NUM</description>
    <externalDeveloperName>COURSE</externalDeveloperName>
    <label>Course</label>
    <length>15</length>
    <type>Text</type>
</CustomField>