force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/ECREDIT__c.field-meta.xml
<CustomField>
    <fullName>ECREDIT__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.ECREDIT</description>
    <externalDeveloperName>ECREDIT</externalDeveloperName>
    <label>Earned Credit Hours</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>