force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from DA_STU_MASTER.STUNO</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transfer Coursework (external)</relationshipLabel>
    <relationshipName>Transfer_Coursework_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>