force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/GPAHRS__c.field-meta.xml
<CustomField>
    <fullName>GPAHRS__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.GPAHRS</description>
    <externalDeveloperName>GPAHRS</externalDeveloperName>
    <label>GPA Hours</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>