force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/GPAPTS__c.field-meta.xml
<CustomField>
    <fullName>GPAPTS__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.GPAPTS</description>
    <externalDeveloperName>GPAPTS</externalDeveloperName>
    <label>GPA Points</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>