force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/GRADE__c.field-meta.xml
<CustomField>
    <fullName>GRADE__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.GRADE</description>
    <externalDeveloperName>GRADE</externalDeveloperName>
    <label>Grade</label>
    <length>4</length>
    <type>Text</type>
</CustomField>