force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/INSTITUTION__c.field-meta.xml
<CustomField>
    <fullName>INSTITUTION__c</fullName>
    <description>Data sourced from DA_MASTREF.INAME</description>
    <externalDeveloperName>INSTITUTION</externalDeveloperName>
    <label>Institution</label>
    <length>60</length>
    <type>Text</type>
</CustomField>