force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/RCREDIT__c.field-meta.xml
<CustomField>
    <fullName>RCREDIT__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.RCREDIT</description>
    <externalDeveloperName>RCREDIT</externalDeveloperName>
    <label>Eligible Credit Hours</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>