force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/TERM__c.field-meta.xml
<CustomField>
    <fullName>TERM__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.CRS_YT</description>
    <externalDeveloperName>TERM</externalDeveloperName>
    <label>Term</label>
    <length>6</length>
    <type>Text</type>
</CustomField>