force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.CTITLE</description>
    <externalDeveloperName>TITLE</externalDeveloperName>
    <label>Course Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>