force-app/main/default/objects/JBT_RET_CLASS_XFER__x/fields/TOPIC__c.field-meta.xml
<CustomField>
    <fullName>TOPIC__c</fullName>
    <description>Data sourced from DA_STU_ACADREC.RTITLE</description>
    <externalDeveloperName>TOPIC</externalDeveloperName>
    <label>Course Topic</label>
    <length>30</length>
    <type>Text</type>
</CustomField>